data/derived/fa15/progs/unify/prog1282.ml.out
Characters 79-91:
  | Sine e -> "sin(pi*%s)" exprToString e
              ^^^^^^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
